--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		<meta name="author" content="Beto Nàjera - formaseideas.com">
+		<meta name="description" content="">
+		<meta name="keywords" content="">
 		<link rel="stylesheet" href="css/styles.css">
-		<title>Kallpa</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<title>KCS | Corredoras de Seguros</title>
 	</head>
 	<body>
-		<h1>Kallpa Corredora de Seguros</h1>
+		<div id="main-bg"></div>
+
+		<script src="js/scripts.js"></script>
 	</body>
 </html>
