--- a/web/index.html
+++ b/web/index.html
@@ -6,12 +6,109 @@
 		<meta name="author" content="Beto Nàjera - formaseideas.com">
 		<meta name="description" content="">
 		<meta name="keywords" content="">
+		<link href="https://file.myfontastic.com/QSgMmW5LJ3kgVssPPFCmYi/icons.css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,700" rel="stylesheet">
 		<link rel="stylesheet" href="css/styles.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<title>KCS | Corredoras de Seguros</title>
 	</head>
+
 	<body>
-		<div id="main-bg"></div>
+		<header>
+			<div class="menu-bar">
+				<div class="bt-menu">
+					<div class="uno"></div>
+					<div class="dos"></div>
+					<div class="tres"></div>
+				</div>
+			</div>
+
+			<div class="fecha-menu">
+				<div class="wrapper">
+					<p id="fecha"></p>
+
+					<nav class="main-menu">
+						<ul class="menu">
+							<li><a href="#">inicio</a></li>
+							<li><a href="#">nosotros</a></li>
+							<li><a href="#">salud</a></li>
+							<li><a href="#">vida</a></li>
+							<li><a href="#">patrimonio</a></li>
+							<li><a href="#">beneficios</a></li>
+							<li><a href="#">contacto</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</header>
+
+		<section class="seccion-home-hero">
+			<div class="contenedor-logos">
+				<figure class="frontal"><img src="img/kcs-logo.png" alt="Kallpa Coderredores de Seguros logo"></figure>
+				<figure class="posterior"><img src="img/kallpa-old-logo.png" alt="KCS Coderredores de Seguros logo"></figure>
+			</div>
+		</section>
+
+		<section class="seccion-bienvenida">
+			<div class="wrapper">
+				<figure><img src="img/foto-bienvenida.jpg" alt="Bienvenidos al mundo de KCS"></figure>
+
+				<article>
+					<p>Bienvenidos al mundo de KCS, donde nos esforzamos para que su tranquilidad y seguridad le permita todos los días SONREIRLE A LA VIDA.</p>
+
+					<a href="#" class="cta cta-azul">ingresar</a>
+				</article>
+			</div>
+		</section>
+
+		<section class="seccion-celeste">
+			<div class="wrapper">
+				<div class="card-container">
+					<div class="frontal"></div>
+
+					<div class="posterior">
+						<h3>Propuesta Laboral</h3>
+						<a href="#" class="cta cta-celeste">ingresar</a>
+					</div>
+				</div>
+
+				<div class="card-container">
+					<div class="frontal"></div>
+
+					<div class="posterior">
+						<h3>Seguro de Salud</h3>
+						<a href="#" class="cta cta-celeste">ingresar</a>
+					</div>
+				</div>
+
+				<div class="card-container">
+					<div class="frontal"></div>
+
+					<div class="posterior">
+						<h3>Seguro de Vida</h3>
+						<a href="#" class="cta cta-celeste">ingresar</a>
+					</div>
+				</div>
+
+				<div class="card-container">
+					<div class="frontal"></div>
+
+					<div class="posterior">
+						<h3>Patrimonio</h3>
+						<a href="#" class="cta cta-celeste">ingresar</a>
+					</div>
+				</div>
+
+				<div class="card-container">
+					<div class="frontal"></div>
+
+					<div class="posterior">
+						<h3>Beneficios</h3>
+						<a href="#" class="cta cta-celeste">ingresar</a>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<script src="js/scripts.js"></script>
 	</body>
