--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,8 @@
 		<meta name="description" content="">
 		<meta name="keywords" content="">
 		<link href="https://file.myfontastic.com/QSgMmW5LJ3kgVssPPFCmYi/icons.css" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,700" rel="stylesheet">
+		<link rel="stylesheet" href="css/fonts.css">
+		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/styles.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<title>KCS | Corredoras de Seguros</title>
