Animación logo casi lista

--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
 
 					<nav class="main-menu">
 						<ul class="menu">
-							<li><a href="#">inicio</a></li>
+							<li><a href="#" class="selected">inicio</a></li>
 							<li><a href="#">nosotros</a></li>
 							<li><a href="#">salud</a></li>
 							<li><a href="#">vida</a></li>
@@ -43,69 +43,80 @@
 			</div>
 		</header>
 
-		<section class="seccion-home-hero">
+		<section class="seccion seccion-home-hero">
 			<div class="contenedor-logos">
-				<figure class="frontal"><img src="img/kcs-logo.png" alt="Kallpa Coderredores de Seguros logo"></figure>
-				<figure class="posterior"><img src="img/kallpa-old-logo.png" alt="KCS Coderredores de Seguros logo"></figure>
+				<div class="logo-card">
+					<figure class="frontal"><img src="img/kcs-logo.png" alt="Kallpa Coderredores de Seguros logo"></figure>
+
+					<figure class="posterior"><img src="img/kallpa-old-logo.png" alt="KCS Coderredores de Seguros logo"></figure>
+				</div>
 			</div>
 		</section>
 
-		<section class="seccion-bienvenida">
-			<div class="wrapper">
-				<figure><img src="img/foto-bienvenida.jpg" alt="Bienvenidos al mundo de KCS"></figure>
+		<section class="seccion seccion-partida">
+			<article class="wrapper">
+				<figure class="img-articulo"><img src="img/foto-bienvenida.jpg" alt="Bienvenidos al mundo de KCS"></figure>
 
-				<article>
-					<p>Bienvenidos al mundo de KCS, donde nos esforzamos para que su tranquilidad y seguridad le permita todos los días SONREIRLE A LA VIDA.</p>
+				<div class="texto-articulo">
+					<p>Bienvenidos al mundo de <span class="bold">Kallpa Corredores de Seguros</span>, donde nos esforzamos para que su tranquilidad y seguridad le permita todos los días SONREIRLE A LA VIDA.</p>
 
-					<a href="#" class="cta cta-azul">ingresar</a>
-				</article>
-			</div>
+					<a href="#" class="cta">ingresar</a>
+				</div>
+			</article>
 		</section>
 
-		<section class="seccion-celeste">
-			<div class="wrapper">
-				<div class="card-container">
-					<div class="frontal"></div>
+		<section class="seccion seccion-cards">
+			<div class="card-container">
+				<div class="card">
+					<figure class="frontal"><img src="img/laboral.png" alt="Propuesta Laboral"></figure>
 
 					<div class="posterior">
 						<h3>Propuesta Laboral</h3>
-						<a href="#" class="cta cta-celeste">ingresar</a>
+						<a href="#" class="cta">ingresar</a>
 					</div>
 				</div>
+			</div>
 
-				<div class="card-container">
-					<div class="frontal"></div>
+			<div class="card-container">
+				<div class="card">
+					<figure class="frontal"><img src="img/salud.png" alt="Seguro de Salud"></figure>
 
 					<div class="posterior">
 						<h3>Seguro de Salud</h3>
-						<a href="#" class="cta cta-celeste">ingresar</a>
+						<a href="#" class="cta">ingresar</a>
 					</div>
 				</div>
+			</div>
 
-				<div class="card-container">
-					<div class="frontal"></div>
+			<div class="card-container">
+				<div class="card">
+					<figure class="frontal"><img src="img/vida.png" alt="Seguro de Vida"></figure>
 
 					<div class="posterior">
 						<h3>Seguro de Vida</h3>
-						<a href="#" class="cta cta-celeste">ingresar</a>
+						<a href="#" class="cta">ingresar</a>
 					</div>
 				</div>
+			</div>
 
-				<div class="card-container">
-					<div class="frontal"></div>
+			<div class="card-container">
+				<div class="card">
+					<figure class="frontal"><img src="img/patrimonio.png" alt="Seguro de Patrimonio"></figure>
 
 					<div class="posterior">
 						<h3>Patrimonio</h3>
-						<a href="#" class="cta cta-celeste">ingresar</a>
+						<a href="#" class="cta">ingresar</a>
 					</div>
 				</div>
+			</div>
 
-				<div class="card-container">
-					<div class="frontal"></div>
+			<div class="card-container">
+				<div class="card">
+					<figure class="frontal"><img src="img/beneficios.png" alt="Beneficios KCS"></figure>
 
 					<div class="posterior">
 						<h3>Beneficios</h3>
-						<a href="#" class="cta cta-celeste">ingresar</a>
+						<a href="#" class="cta">ingresar</a>
 					</div>
 				</div>
 			</div>
